--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: ./actions-a
+      - uses: ./.github/actions/actions-a
         with: 
           MY_NAME: "Mona"
